Revert "Web Search を OpenAI 依存へ変更。"
This reverts commit b4f57ead8b3280b3cf8fc9da229b01867810830a.